# rust_distributed_gameserver

./: .gitignore  Cargo.toml  README.md
crates/client/: Cargo.toml  multi_test.sh  readme.md  shutdown_all_test.sh
crates/client/src/: http_req.rs  main.rs  shutdown_all_client.sh  test_multi_client.sh
crates/common/: Cargo.toml
crates/common/src/: basic.rs  lib.rs  message.rs  node.rs  result.rs
crates/common_server/: Cargo.toml
crates/common_server/src/: lib.rs  map_tool.rs
crates/heartbeat/: Cargo.toml
crates/heartbeat/src/: lib.rs
crates/operation/: Cargo.toml
crates/registry_center/: Cargo.toml  readme.md
crates/registry_center/src/: app_context.rs  handler.rs  main.rs  result.rs  route.rs  server_keeping.rs  zmq_handler.rs
crates/server/: Cargo.toml  readme.md
crates/server/config/: conf.toml  single.toml  slave1.toml  slave2.toml  slave3.toml  slave4.toml
crates/server/script/: run.sh  single_run.sh  slave1.sh  slave2.sh  slave3.sh  slave4.sh
crates/server/src/: config.rs  distribute.rs  heartbeat.rs  http_rpc.rs  main.rs  main_handle.rs  server_context.rs  server_run.rs  snow_id.rs  world.rs
