[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# zeromq = {version="0.3.3",features=["tokio-runtime","tcp-transport"]}
zeromq = {path="../zmq.rs",features=["tokio-runtime","tcp-transport"]}

tokio = { version = "1.28.2", features = ["rt", "net","sync"] }
uuid = {version = "1.3.4",features=["v4"]}
common = { path = "../common" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
reqwest = "0.11.18"
