[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
# zeromq = {version="0.3.3",features=["tokio-runtime","tcp-transport"]}
zeromq = {path="../zmq.rs",features=["tokio-runtime","tcp-transport"]}

bytes = "1.4.0"