[package]
name = "heartbeat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeromq = {path="../zmq.rs",features=["tokio-runtime","tcp-transport"]}
tokio = { version = "1.28.2", features = ["rt", "net","sync"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
common = { path = "../common" }