[package]
name = "register"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
# tokio = { version = "1.28.2", features = ["rt", "net","sync"] }
tokio = {version = "1.28.2",features=["full"]}
chrono = { version = "0.4.19", features = ["serde"] }
zeromq = {path="../zmq.rs",features=["tokio-runtime","tcp-transport"]}
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
common = { path = "../common" }
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }