[package]
name = "game_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "server"
# path = "src/main.rs"

[dependencies]
rand = "0.8.5"
toml = "0.7.4"
# zeromq = {version="0.3.3",features=["tokio-runtime","tcp-transport"]}
zeromq = {path="../zmq.rs",features=["tokio-runtime","tcp-transport"]}
# snowflake = "1.3.0"
idgenerator = "2.0.0"
tokio = { version = "1.28.2", features = ["rt", "net","sync"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
common = { path = "../common" }
chrono = { version = "0.4.19", features = ["serde"] }
common_server = { path = "../common_server" }
heartbeat = { path = "../heartbeat" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
reqwest = "0.11.18"
uuid = {version = "1.3.4",features=["v4"]}
bincode = "1.3.3"